Fix: Gear list spacing in set bonus tooltip

--- a/src/app/item-popup/SetBonus.m.scss
+++ b/src/app/item-popup/SetBonus.m.scss
@@ -40,6 +40,7 @@
 
 .gearList {
   composes: flexRow from '../dim-ui/common.m.scss';
+  margin-top: 8px;
   gap: 2px;
 }
 
